--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-batch-http": "^1.2.11",
+    "apollo-link-http": "^1.5.14",
+    "enzyme": "^3.9.0",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "react": "^16.8.5",
+    "react-apollo": "^2.5.3",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-redux": "^6.0.1",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-test-renderer": "^16.8.5",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
